# ComfyUI-UniRig

./: .gitignore  README.md  __init__.py  install.py  prestartup_script.py  pyproject.toml  pytest.ini  unirig_nodes.py
.github/workflows/: test-linux.yml  test-macos.yml  test-windows.yml
lib/: blender_export_fbx.py  blender_export_posed_fbx.py  blender_extract.py  blender_parse_skeleton.py  model_cache.py
lib/unirig/src/data/: asset.py  exporter.py  extract.py  raw_data.py
lib/unirig/src/inference/: merge.py
lib/unirig/src/model/: unirig_ar.py  unirig_skin.py
lib/unirig/src/model/pointcept/models/: PTv3Object.py
lib/unirig/src/system/: ar.py  skin.py
nodes/: __init__.py  base.py  skeleton_extraction.py  skeleton_io.py  skinning.py
static/three/examples/jsm/loaders/: LoaderUtils.js
tests/: conftest.py  verify_remapping.py
tests/code/: smoke_test.py
web/: viewer_fbx.html
web/js/: mesh_preview_fbx.js
workflows/: rig_human.json  rig_human_with_texture.json  rigged_manipulator.json
