[project]
name = "comfyui-unirig"
description = "Automatic skeleton extraction for ComfyUI using UniRig (SIGGRAPH 2025). Self-contained with bundled Blender. This node is a first draft! Please open a github issue if you have any feature requests or problems :)"
version = "1.0.5"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Core dependencies for ComfyUI-UniRig
dependencies = [
    # PyTorch (ComfyUI compatible)
    "torch>=2.0.0",
    "torchvision",

    # Core 3D processing
    "trimesh",
    "numpy",
    "scipy",
    "pyrender",

    # UniRig ML dependencies
    "transformers==4.51.3",
    "pytorch-lightning",
    "lightning",
    "timm",
    "einops",
    "addict",

    # Configuration
    "omegaconf",
    "python-box",

    # HuggingFace
    "huggingface-hub",

    # Mesh processing
    "fast-simplification",

    # Optional: wandb for training (not needed for inference)
    # "wandb",

    # Note: torch-cluster, torch-scatter, and spconv are installed via lib/unirig/install.py
    # Note: Blender is bundled and auto-installs on first use
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-UniRig"
Documentation = "https://github.com/PozzettiAndrea/ComfyUI-UniRig#readme"

# Comfy Registry configuration
[tool.comfy]
PublisherId = "pznodes"
DisplayName = "ComfyUI-UniRig"
Icon = ""

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest",
    "black",
    "flake8",
]
